--- a/style.css
+++ b/style.css
@@ -1,18 +1,53 @@
 body {
-    background-color: skyblue;
+    background-color: darkgreen;
 }
 
-header {
-    background-color: royalblue;
+h1 {
+    font-family: fantasy;
+    font-size: 40px;
+    margin: 0px;
+    padding: 0px;
+    letter-spacing: 3px;
+    color: purple;
+}
+
+header, h3 {
+    background-color: lightgreen;
     text-align: center;
+    padding: 0px;
 }
 
-h3 {
+h2.title-line {
+    margin-top: 0px;
+}
+
+h2, h3 {
+    font-family: arial;
+}
+
+hr {
+    background-color: black;
+}
+
+div {
     text-align: center;
 }
 
 .image {
     margin: 0 auto;
     width: 300px;
+    height: 400px;
     display: block;
+}
+
+footer {
+    text-align: center;
+}
+
+p {
+    font-family: calibri, arial;
+}
+
+ul {
+    font-family: calibri, arial;
 }
