--- a/style.css
+++ b/style.css
@@ -73,10 +73,10 @@ ol {
 
 /* link styling */
 a:link {
-    color: blue;    
+    color: skyblue;    
 }
 a:visited { 
-    color: rgb(245, 39, 39);  
+    color: rgb(179, 51, 51);  
 }
 a:hover { 
     color: green;    
