--- a/style.css
+++ b/style.css
@@ -64,10 +64,9 @@ ol {
     text-align: left;
 }
 
-button {
+a.buttons {
     background-color: royalblue;
-    padding: 12px 22px;
-    font-size: 16px;
+    -webkit-appearance: button;
 }
 
 /* link styling */
