--- a/style.css
+++ b/style.css
@@ -67,6 +67,9 @@ ol {
 a.buttons {
     background-color: royalblue;
     -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    padding: 15px 30px;
 }
 
 /* link styling */
