--- a/style.css
+++ b/style.css
@@ -69,7 +69,9 @@ a.buttons {
     -webkit-appearance: button;
     -moz-appearance: button;
     appearance: button;
-    padding: 15px 30px;
+    height: 15px;
+    width: 30px;
+    font-size: 16px;
 }
 
 /* link styling */
@@ -89,5 +91,5 @@ a.projects:active {
     color: white;  
 }
 a.buttons:active {
-    background-color: white;
+    background-color: green;
 }
