--- a/style.css
+++ b/style.css
@@ -64,11 +64,8 @@ ol {
     text-align: left;
 }
 
-a.buttons {
+button {
     background-color: royalblue;
-    -webkit-appearance: button;
-    -moz-appearance: button;
-    appearance: button;
     height: 15px;
     width: 30px;
     font-size: 16px;
@@ -84,12 +81,12 @@ a.projects:visited {
 a.projects:hover { 
     color: green;    
 }
-a.buttons:hover {
+button:hover {
     background-color: green;
 }
 a.projects:active { 
     color: white;  
 }
-a.buttons:active {
+button:active {
     background-color: green;
 }
