--- a/style.css
+++ b/style.css
@@ -52,6 +52,11 @@ ul {
     font-family: calibri, arial;
     color: white;
     list-style-type: square;
+    margin-left: 20px;
+}
+
+li {
+    line-height: 10px;
 }
 
 .button {
